# Roommate-manager

./: Cargo.toml  README.md  package-lock.json
css/: .gitignore  main.js  styles.css
js/: main.js
public/: index.html
public/js/: main.js
src/: main.rs
